--- a/Sample-CollectionView-with-CompositionType/Base.lproj/Main.storyboard
+++ b/Sample-CollectionView-with-CompositionType/Base.lproj/Main.storyboard
@@ -32,7 +32,35 @@
                     <view key="view" contentMode="scaleToFill" id="G5s-Fd-iEc">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="VFa-l1-qFW">
+                                <rect key="frame" x="0.0" y="20" width="375" height="598"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="xnm-hf-oxG">
+                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="XKR-c2-TGb">
+                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </view>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="VFa-l1-qFW" firstAttribute="top" secondItem="cCE-ZL-TCj" secondAttribute="top" id="27z-0I-frE"/>
+                            <constraint firstItem="cCE-ZL-TCj" firstAttribute="bottom" secondItem="VFa-l1-qFW" secondAttribute="bottom" id="FFI-qU-KTa"/>
+                            <constraint firstItem="cCE-ZL-TCj" firstAttribute="trailing" secondItem="VFa-l1-qFW" secondAttribute="trailing" id="Xpi-Qv-79P"/>
+                            <constraint firstItem="VFa-l1-qFW" firstAttribute="leading" secondItem="cCE-ZL-TCj" secondAttribute="leading" id="aj8-U1-hOQ"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="cCE-ZL-TCj"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Item 1" id="pk7-7D-rWv"/>
