update with new name

--- a/Sample-CollectionView-with-CompositionType/Base.lproj/Main.storyboard
+++ b/Sample-CollectionView-with-CompositionType/Base.lproj/Main.storyboard
@@ -65,7 +65,7 @@
                     </view>
                     <tabBarItem key="tabBarItem" title="Item 1" id="pk7-7D-rWv"/>
                     <connections>
-                        <outlet property="tableView" destination="VFa-l1-qFW" id="6fG-tM-GGG"/>
+                        <outlet property="collectionView" destination="VFa-l1-qFW" id="YtD-Tp-Wse"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cOk-Wb-I8T" userLabel="First Responder" sceneMemberID="firstResponder"/>
