--- a/Sample-CollectionView-with-CompositionType/Views/ImageLogCollectionViewCell.xib
+++ b/Sample-CollectionView-with-CompositionType/Views/ImageLogCollectionViewCell.xib
@@ -1,21 +1,49 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="ImageLogCollectionViewCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="ImageLogCollectionViewCell" customModule="Sample_CollectionView_with_CompositionType" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="367" height="276"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
+                <rect key="frame" x="0.0" y="0.0" width="367" height="276"/>
+                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <subviews>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="j8B-yb-S6s">
+                        <rect key="frame" x="0.0" y="0.0" width="367" height="275.5"/>
+                        <constraints>
+                            <constraint firstAttribute="width" secondItem="j8B-yb-S6s" secondAttribute="height" multiplier="4:3" id="01d-iG-MdC"/>
+                        </constraints>
+                    </imageView>
+                    <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="xN2-Yt-9IW">
+                        <rect key="frame" x="174" y="128.5" width="20" height="20"/>
+                    </activityIndicatorView>
+                </subviews>
             </view>
+            <constraints>
+                <constraint firstItem="xN2-Yt-9IW" firstAttribute="centerX" secondItem="j8B-yb-S6s" secondAttribute="centerX" id="82j-Ks-7c6"/>
+                <constraint firstItem="j8B-yb-S6s" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="MBI-zJ-n9n"/>
+                <constraint firstItem="j8B-yb-S6s" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="Wz7-oj-n6V"/>
+                <constraint firstAttribute="trailing" secondItem="j8B-yb-S6s" secondAttribute="trailing" id="g5h-Q4-Xcj"/>
+                <constraint firstItem="xN2-Yt-9IW" firstAttribute="centerY" secondItem="j8B-yb-S6s" secondAttribute="centerY" id="u6Q-WE-xPt"/>
+            </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
+            <size key="customSize" width="367" height="276"/>
+            <connections>
+                <outlet property="imageView" destination="j8B-yb-S6s" id="xdf-KS-JeE"/>
+                <outlet property="indicatorView" destination="xN2-Yt-9IW" id="iaY-RC-1dY"/>
+            </connections>
+            <point key="canvasLocation" x="139.5" y="-91"/>
         </collectionViewCell>
     </objects>
 </document>
