--- a/Sample-CollectionView-with-CompositionType/Base.lproj/Main.storyboard
+++ b/Sample-CollectionView-with-CompositionType/Base.lproj/Main.storyboard
@@ -72,6 +72,21 @@
             </objects>
             <point key="canvasLocation" x="377" y="-316"/>
         </scene>
+        <!--Image Detail View Controller-->
+        <scene sceneID="h6w-x1-AuV">
+            <objects>
+                <viewController id="qmb-il-LRl" customClass="ImageDetailViewController" customModule="Sample_CollectionView_with_CompositionType" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Dvv-qB-ydV">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <viewLayoutGuide key="safeArea" id="Rx6-My-x8Y"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Oyf-hW-2UB" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1077.5999999999999" y="-306.29685157421289"/>
+        </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="08S-AV-nR2">
             <objects>
