--- a/Sample-CollectionView-with-CompositionType/Base.lproj/Main.storyboard
+++ b/Sample-CollectionView-with-CompositionType/Base.lproj/Main.storyboard
@@ -76,7 +76,7 @@
         <!--Image Detail View Controller-->
         <scene sceneID="h6w-x1-AuV">
             <objects>
-                <viewController storyboardIdentifier="ImageDetailViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="qmb-il-LRl" customClass="ImageDetailViewController" customModule="Sample_CollectionView_with_CompositionType" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ImageDetailViewController" modalPresentationStyle="overCurrentContext" useStoryboardIdentifierAsRestorationIdentifier="YES" id="qmb-il-LRl" customClass="ImageDetailViewController" customModule="Sample_CollectionView_with_CompositionType" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Dvv-qB-ydV">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -86,12 +86,13 @@
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="kEF-PL-Qfc">
                                         <rect key="frame" x="0.0" y="-0.5" width="343" height="257.5"/>
+                                        <color key="backgroundColor" red="0.3483292013" green="1" blue="0.81783893279999997" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="kEF-PL-Qfc" secondAttribute="height" multiplier="4:3" id="CGB-ea-C2v"/>
                                         </constraints>
                                     </imageView>
                                 </subviews>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" red="1" green="0.94009837389999995" blue="0.9073182528" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="kEF-PL-Qfc" secondAttribute="trailing" id="DWU-KT-MqH"/>
                                     <constraint firstItem="kEF-PL-Qfc" firstAttribute="top" secondItem="gc9-I3-ftA" secondAttribute="top" id="DZb-lM-inc"/>
@@ -99,18 +100,33 @@
                                     <constraint firstAttribute="bottom" secondItem="kEF-PL-Qfc" secondAttribute="bottom" constant="60" id="dfX-qE-H4L"/>
                                 </constraints>
                             </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="X4Z-rd-Drn">
+                                <rect key="frame" x="137" y="445.5" width="100" height="34"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="lCO-0B-nAx"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="onExit:" destination="qmb-il-LRl" eventType="touchUpInside" id="noy-fd-hPC"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="X4Z-rd-Drn" firstAttribute="centerX" secondItem="Dvv-qB-ydV" secondAttribute="centerX" id="2ay-oC-0Xh"/>
                             <constraint firstItem="gc9-I3-ftA" firstAttribute="centerY" secondItem="Dvv-qB-ydV" secondAttribute="centerY" id="7D7-Oi-nFB"/>
+                            <constraint firstItem="Rx6-My-x8Y" firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="gc9-I3-ftA" secondAttribute="bottom" constant="16" id="FKf-I4-jRf"/>
                             <constraint firstItem="gc9-I3-ftA" firstAttribute="centerX" secondItem="Dvv-qB-ydV" secondAttribute="centerX" id="GfR-DS-vpb"/>
+                            <constraint firstItem="X4Z-rd-Drn" firstAttribute="top" secondItem="kEF-PL-Qfc" secondAttribute="bottom" constant="13" id="eQV-Qg-504"/>
                             <constraint firstItem="gc9-I3-ftA" firstAttribute="leading" secondItem="Rx6-My-x8Y" secondAttribute="leading" constant="16" id="feM-2z-rYT"/>
                             <constraint firstItem="Rx6-My-x8Y" firstAttribute="trailing" secondItem="gc9-I3-ftA" secondAttribute="trailing" constant="16" id="ssT-Ku-zmz"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Rx6-My-x8Y"/>
                     </view>
                     <connections>
-                        <outlet property="imageView" destination="kEF-PL-Qfc" id="J3N-EW-ogx"/>
+                        <outlet property="button" destination="X4Z-rd-Drn" id="Qzn-Uu-kOZ"/>
+                        <outlet property="imageView" destination="kEF-PL-Qfc" id="5gB-a4-XHf"/>
                         <outlet property="modalView" destination="gc9-I3-ftA" id="g7y-e9-4qp"/>
                     </connections>
                 </viewController>
